objects/pse__Default_Assignments_for_Jira_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Stores the settings used by Batch Apex jobs for selecting default assignments for syncing time from Jira.</description>
    <fields>
        <fullName>pse__Default_Assignments_for_Jira_Batch_Size__c</fullName>
        <defaultValue>1</defaultValue>
        <description>The number of records to process in a single batch. The value is 1 by default.</description>
        <inlineHelpText>The number of records to process in a single batch. The value is 1 by default.</inlineHelpText>
        <label>Default Assignments for Jira Batch Size</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Notification_Recipients__c</fullName>
        <description>Specifies the notification recipients for Default Assignments for Jira batch notifications sent via Chatter, email or tasks. The value is a list of email addresses separated by semicolons (;). If left blank, the user who started the process is notified.</description>
        <inlineHelpText>Specifies the notification recipients for Default Assignments for Jira batch notifications sent via Chatter, email or tasks. The value is a list of email addresses separated by semicolons (;). If left blank, the user who started the process is notified.</inlineHelpText>
        <label>Notification Recipients</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pse__Notifications_by_Chatter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, notifications from Default Assignments for Jira batch processes are sent via Chatter to recipients listed in the Notification Recipients field. This is deselected by default.</description>
        <inlineHelpText>If selected, notifications from Default Assignments for Jira batch processes are sent via Chatter to recipients listed in the Notification Recipients field. This is deselected by default.</inlineHelpText>
        <label>Notifications by Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Notifications_by_Email__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If selected, notifications from Default Assignments for Jira batch processes are sent via email to recipients listed in the Notification Recipients field. This is deselected by default.</description>
        <inlineHelpText>If selected, notifications from Default Assignments for Jira batch processes are sent via email to recipients listed in the Notification Recipients field. This is deselected by default.</inlineHelpText>
        <label>Notifications by Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Notifications_by_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, notifications from Default Assignments for Jira batch processes are sent via tasks to recipients listed in the Notification Recipients field. This is deselected by default.</description>
        <inlineHelpText>If selected, notifications from Default Assignments for Jira batch processes are sent via tasks to recipients listed in the Notification Recipients field. This is deselected by default.</inlineHelpText>
        <label>Notifications by Task</label>
        <type>Checkbox</type>
    </fields>
    <label>Default Assignments for Jira Settings</label>
</CustomObject>